bugfix/WY-515 auto wrap excerpt text into p-tags in banner and image-text blocks

--- a/src/common/scss/blocks/helsinki/_banner.scss
+++ b/src/common/scss/blocks/helsinki/_banner.scss
@@ -240,6 +240,16 @@
 				margin-left: auto;
 				margin-right: auto;
 				text-align: center;
+
+				p {
+					margin-left: auto;
+					margin-right: auto;
+					text-align: center;	
+
+					&:last-child {
+						margin-bottom: 0;
+					}
+				}
 			}
 
 			&__inner {
